<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trigger_name"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/trigger_name"
            android:inputType="text"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/trigger_phrases"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/inputPhrases"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/trigger_phrases"
            android:inputType="text"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/trigger_action"
            android:textSize="13sp" />

        <Spinner
            android:id="@+id/spinnerAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/trigger_params"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/inputParam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/trigger_params"
            android:inputType="text"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/trigger_reply"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/inputReply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/trigger_reply"
            android:inputType="textMultiLine"
            android:importantForAutofill="no" />
    </LinearLayout>
</ScrollView>